<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout"
    tools:context=".MainActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btndata"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="149dp"
            android:layout_height="138dp"
            android:elevation="5sp"
            android:isScrollContainer="false"
            android:text="@string/data"
            android:textColor="#96A0D5"
            android:textSize="22sp"
            android:textStyle="bold"
            app:icon="@drawable/data"
            app:iconGravity="top"
            app:iconPadding="20dp"
            app:iconSize="68dp"
            app:iconTint="#D7A11E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.099"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btntimer"
            app:layout_constraintVertical_bias="0.138" />

        <Button
            android:id="@+id/btnspeed"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="149dp"
            android:layout_height="138dp"
            android:layout_marginBottom="30dp"
            android:elevation="5sp"
            android:isScrollContainer="false"
            android:text="@string/speed"
            android:textColor="#96A0D5"
            android:textSize="22sp"
            android:textStyle="bold"
            app:icon="@drawable/speed"
            app:iconGravity="top"
            app:iconPadding="20dp"
            app:iconSize="68dp"
            app:iconTint="#D7A11E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.643"
            app:layout_constraintStart_toEndOf="@+id/btndata"
            app:layout_constraintTop_toBottomOf="@+id/btntemp"
            app:layout_constraintVertical_bias="0.164" />

        <Button
            android:id="@+id/btnvolume"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="142dp"
            android:layout_height="131dp"
            android:elevation="5sp"
            android:isScrollContainer="false"
            android:text="@string/volume"
            android:textColor="#96A0D5"
            android:textSize="22sp"
            android:textStyle="bold"
            app:icon="@drawable/volume"
            app:iconGravity="top"
            app:iconPadding="10dp"
            app:iconSize="70dp"
            app:iconTint="#D7A11E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.634"
            app:layout_constraintStart_toEndOf="@+id/btnweight"
            app:layout_constraintTop_toBottomOf="@+id/btnarea"
            app:layout_constraintVertical_bias="0.058" />

        <Button
            android:id="@+id/btncook"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="149dp"
            android:layout_height="138dp"
            android:layout_marginTop="680dp"
            android:elevation="5sp"
            android:isScrollContainer="false"
            android:text="@string/cooking"
            android:textColor="#96A0D5"
            android:textSize="22sp"
            android:textStyle="bold"
            app:icon="@drawable/cook"
            app:iconGravity="top"
            app:iconPadding="20dp"
            app:iconSize="68dp"
            app:iconTint="#D7A11E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.099"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnarea"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="138dp"
            android:layout_height="152dp"
            android:elevation="5sp"
            android:text="@string/area"
            android:textColor="#96A0D5"
            android:textSize="22sp"
            android:textStyle="bold"
            app:icon="@drawable/area"
            app:iconGravity="top"
            app:iconPadding="25dp"
            app:iconSize="70dp"
            app:iconTint="#D7A11E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.642"
            app:layout_constraintStart_toEndOf="@+id/btnlength"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.041" />

        <Button
            android:id="@+id/btntemp"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="142dp"
            android:layout_height="138dp"
            android:elevation="5sp"
            android:isScrollContainer="false"
            android:text="@string/temperature"
            android:textColor="#96A0D5"
            android:textSize="20sp"
            android:textStyle="bold"
            app:icon="@drawable/temp"
            app:iconGravity="top"
            app:iconSize="65dp"
            app:iconTint="#D7A11E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.663"
            app:layout_constraintStart_toEndOf="@+id/btntimer"
            app:layout_constraintTop_toBottomOf="@+id/btnvolume"
            app:layout_constraintVertical_bias="0.073" />

        <Button
            android:id="@+id/btntimer"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="139dp"
            android:layout_height="140dp"
            android:layout_marginTop="24dp"
            android:elevation="5sp"
            android:isScrollContainer="false"
            android:text="@string/timer"
            android:textColor="#96A0D5"
            android:textSize="22sp"
            android:textStyle="bold"
            app:icon="@drawable/timer"
            app:iconGravity="top"
            app:iconPadding="10dp"
            app:iconSize="80dp"
            app:iconTint="#D7A11E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.091"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnweight" />

        <Button
            android:id="@+id/btnweight"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="139dp"
            android:layout_height="131dp"
            android:elevation="5sp"
            android:isScrollContainer="false"
            android:text="@string/weight"
            android:textColor="#96A0D5"
            android:textSize="22sp"
            android:textStyle="bold"
            app:icon="@drawable/weight"
            app:iconGravity="top"
            app:iconPadding="5dp"
            app:iconSize="70dp"
            app:iconTint="#D7A11E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.095"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnlength"
            app:layout_constraintVertical_bias="0.062" />

        <Button
            android:id="@+id/btnlength"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="138dp"
            android:layout_height="148dp"
            android:elevation="5sp"
            android:isScrollContainer="false"
            android:text="@string/length"
            android:textColor="#96A0D5"
            android:textSize="22sp"
            android:textStyle="bold"
            app:icon="@drawable/ruler__1_"
            app:iconGravity="top"
            app:iconPadding="7dp"
            app:iconSize="90dp"
            app:iconTint="#D7A11E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.095"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.043" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>